# hriworkshop_summerschoolTHRISS

./: .gitignore  CMakeLists.txt  Dockerfile_official  README.md  compose.yaml  from pydub import AudioSegment.py
app/HRIworkshopTHRISS/: CMakeLists.txt
app/HRIworkshopTHRISS/conf/: HRImanager.ini
app/HRIworkshopTHRISS/scripts/: HRImanager.sh  HRIworkshopTHRISS.xml
cpp_modules/emptyProject/include/iCub/: emptyModule.h
cpp_modules/emptyProject/src/: main.cpp
docker/: compose.yaml
docker/gazebo_world/: obj_and_robot.sdf  obj_no_robot.sdf
docker/modules/objectRecognition-main/: .gitlab-ci.yml  README.md
docker/modules/objectRecognition-main/app/: CMakeLists.txt
docker/modules/objectRecognition-main/app/objectRecognition/conf/: face_tracking.ini
docker/modules/objectRecognition-main/app/objectRecognition/scripts/: DEMO_objectRecognition.xml  objectRecognition.xml
docker/modules/objectRecognition-main/docker/: Dockerfile  docker-compose.yml
docker/modules/objectRecognition-main/misc/: webcam_mac.py
docker/modules/objectRecognition-main/modules/objectRecognition/: factory.py
docker/modules/speech2text-main/: CMakeLists.txt  README.md
docker/modules/speech2text-main/app/scripts/: speech2text.xml
docker/modules/speech2text-main/modules/: CMakeLists.txt  requirements.txt
docker/modules/speech2text-main/modules/rec_from_keyboard/: CMakeLists.txt  main.py
docker/modules/speech2text-main/modules/speech2text/: CMakeLists.txt
docker/modules/speech2text-main/modules/to delete/: recognition.py
docker/other/: Dockerfile gazebo_minimal  Dockerfile_ev  Dockerfile_official  Dockerfile_old  webcam.py
modules/HRI-manager/: CMakeLists.txt
modules/HRI-manager/app/: CMakeLists.txt
modules/HRI-manager/app/HRIworkshopTHRISS/conf/: HRImanager.ini
modules/HRI-manager/app/HRIworkshopTHRISS/scripts/: HRImanager.sh  HRIworkshopTHRISS.xml
modules/HRI-manager/cpp_modules/: CMakeLists.txt
modules/HRI-manager/cpp_modules/emptyProject/: CMakeLists.txt
modules/HRI-manager/cpp_modules/emptyProject/include/iCub/: emptyThread.h
modules/HRI-manager/cpp_modules/emptyProject/src/: emptyModule.cpp  emptyThread.cpp
modules/HRI-manager/modules/HRImanager/: CMakeLists.txt  HRImanager_step1.py  HRImanager_step2.py  HRImanager_step3.py  HRImanager_step4.py  HRImanager_step5.py
modules/HRI-manager/modules/HRImanager/utils/: actions.py  cube.py  memory.py  objectReader.py  speech.py  state.py
modules/HRI-manager/python_modules/: CMakeLists.txt
modules/HRI-manager/python_modules/HRImanager/: HRImanager_step1.py  HRImanager_step2.py  HRImanager_step3.py  HRImanager_step4.py  HRImanager_step5.py
modules/HRI-manager/python_modules/HRImanager/utils/: actions.py  cube.py  memory.py  objectReader.py  speech.py  world.py
modules/gazebo/: Workshop.world  test
modules/gazebo/models/Banana/: model.sdf
modules/gazebo/models/Orange/: model.sdf
modules/gazebo/models/interface/: model.urdf
modules/gazebo/worlds/: workshop.world  workshopV2.world
modules/iChat/: .gitignore  CMakeLists.txt  README.md
modules/iChat/app/: CMakeLists.txt
modules/iChat/modules/: CMakeLists.txt  requirements.txt
modules/iChat/modules/iChat/: main.py
modules/iChat/modules/iChatGUI/: CMakeLists.txt  main.py
modules/icub-interaction-demos/: .gitignore  CMakeLists.txt  README.md
modules/icub-interaction-demos/app/: CMakeLists.txt
modules/icub-interaction-demos/app/icubDemos/: CMakeLists.txt  check_diff.sh
modules/icub-interaction-demos/app/icubDemos/conf/: CARLA_demo.sh  DoreenDemo.sh  SocialBenchPres.sh  alessia_demo.sh  connect4.sh  conversationManager.sh  iCubJengaDemo.sh  icub_addressee_estimation_video.sh  icub_basics.sh  icub_crocodile_dance.sh  icub_demos.sh  icub_qa.sh  icub_secretary.sh  italian_gestures.sh  laura_marco_rec.sh  meeting_icub.sh  nod_shake.sh  pilotChefsHat.sh  publicGoodGame.sh  selfIntroduction_demo.sh  selfIntroduction_demo_english.sh  yoga_pose.sh
modules/icub-interaction-demos/app/icubDemos/scripts/: iCubDemos.xml.template
modules/icub-interaction-demos/src/: CMakeLists.txt
modules/icub-interaction-demos/src/interactionInterface/: CMakeLists.txt  README.md
modules/icub-interaction-demos/src/interactionInterface/include/iCub/: interactionInterfaceModule.h  interactionInterfaceThread.h
modules/icub-interaction-demos/src/interactionInterface/src/: interactionInterfaceModule.cpp  interactionInterfaceThread.cpp  main.cpp
modules/objectRecognition/: .gitignore  CMakeLists.txt
modules/objectRecognition/app/objectRecognition/scripts/: objectRecognition.xml
modules/objectRecognition/docker/: CMakeLists.txt  _run_face_detector.sh
modules/objectRecognition/misc/: YARP-independent.py
modules/objectRecognition/modules/: CMakeLists.txt  requirements.txt
modules/objectRecognition/modules/objectRecognition/: CMakeLists.txt  main.py
modules/speech2text/: .gitignore
modules/speech2text/app/: CMakeLists.txt
modules/speech2text/app/conf/: speech2text.ini
modules/speech2text/app/scripts/: speech2text.xml
modules/speech2text/modules/: requirements.txt
modules/speech2text/modules/speech2text/: YARP_microphone_class.py  main.py
modules/text2speech/: CMakeLists.txt  README.md
modules/text2speech/app/: CMakeLists.txt
modules/text2speech/app/text2speech/scripts/: text2speech.xml
modules/text2speech/modules/: CMakeLists.txt
modules/text2speech/modules/text2speech/: CMakeLists.txt  main.py
other/: Dockerfile gzonly-WORKING
python_modules/: CMakeLists.txt  requirements.txt
python_modules/HRImanager/: CMakeLists.txt  HRImanager.py  HRImanager_step1.py  HRImanager_step2.py
python_modules/HRImanager/utils/: actions.py  cube.py  object.py  objectReader.py  speech.py
python_modules/addresseeClassifier/: CMakeLists.txt  addresseeClassifier.py
python_modules/addresseeClassifier/modules_lightweight/: pose.py
python_modules/addresseeClassifier/utils/: body.py  bodyLightweight.py  classificationArchitecture.py  deepArchitecture.py  heatmap.py  model.py  sequenceCreator.py  transformation.py  util.py  visualization.py  with_mobilenet.py
