# Copyright: (C) Robotics Brain and Cognitive Sciences (RBCS) - Istituto Italiano di Tecnologia
# Authors: Luca Garello
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

# add the modules you want to install
# each module is a subdirectory of this folder and will install its own executables

#add_subdirectory(emptyProject) # this is a module
#add_subdirectory() # this is a module

